# api_rust

./: Cargo.toml
src/: .env  error.rs  main.rs
