[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server AND Web

axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }

# Database

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
